--- a/src/app/components/core/search-form/search-form.component.html
+++ b/src/app/components/core/search-form/search-form.component.html
@@ -1,1 +1,6 @@
-<p>search-form works!</p>
+<form>
+  <mat-form-field>
+    <input matNativeControl placeholder="Search..." [(ngModel)]="term" name="term">
+  </mat-form-field>
+  <app-button (click)="search()" [disabled]="loading">Search</app-button>
+</form>
