--- a/src/app/core/pages/search.page.html
+++ b/src/app/core/pages/search.page.html
@@ -1,4 +1,7 @@
 <app-header>
   <app-search-form/>
 </app-header>
-<app-list [items]="items"/>
+
+<app-container>
+  <app-list [items]="items"/>
+</app-container>
