--- a/src/app/core/components/item/item.component.html
+++ b/src/app/core/components/item/item.component.html
@@ -1,3 +1,19 @@
 <ng-container *ngIf="data">
-  <div>{{ data.snippet.title }}</div>
+  <div class="image-container">
+    <img src="{{ data.snippet.thumbnails.medium.url }}" loading="lazy"/>
+  </div>
+  <div class="statistics" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="10px">
+    <span fxFlex="1 2 auto">
+      <mat-icon>visibility</mat-icon> {{ data.statistics.viewCount }}
+    </span>
+    <span fxFlex="auto">
+      <mat-icon>thumb_up</mat-icon> {{ data.statistics.likeCount }}
+    </span>
+    <span fxFlex="auto">
+      <mat-icon>thumb_down</mat-icon> {{ data.statistics.dislikeCount }}
+    </span>
+    <span fxFlex="1 1 auto">
+      <mat-icon>comment</mat-icon> {{ data.statistics.commentCount }}
+    </span>
+  </div>
 </ng-container>
