--- a/src/app/core/components/item/item.component.scss
+++ b/src/app/core/components/item/item.component.scss
@@ -1,4 +1,29 @@
 :host {
-  background: blue;
-  border: 2px solid red;
+  display: block;
+  width: 100%;
+  padding: 0.5em 0.5em 0.25em;
+  box-sizing: border-box;
+  background-color: var(--app-container-background);
+}
+
+.statistics {
+  white-space: nowrap;
+  font-size: 0.85em;
+  padding: 0.5em 0;
+  margin-top: 0.5em;
+
+  mat-icon {
+    font-size: 1.5em;
+    width: 1.15em;
+    height: 1em;
+    vertical-align: middle;
+  }
+
+  > span {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
