--- a/src/app/core/components/list/list.component.html
+++ b/src/app/core/components/list/list.component.html
@@ -1,6 +1,6 @@
 
 
-<mat-grid-list [cols]="config.columns" rowHeight="28:33">
+<mat-grid-list [cols]="config.columns" rowHeight="28:33" gutterSize="10px">
   @for (item of items; track $index) {
   <mat-grid-tile>
     <app-item [data]="item"/>
