--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+@use 'sass:map';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@use '@angular/material' as mat;
+@use './styles/theme' as theme;
+
+:root {
+  --app-container-background: #{map.get(theme.$neutral, 95)};
+  --app-logo-height: 50px;
+}
+
+html {
+  @include mat.core();
+  @include mat.all-component-themes(theme.$app-theme);
+  @include mat.typography-hierarchy(theme.$app-theme);
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
