--- a/src/app/core/pages/search.page.html
+++ b/src/app/core/pages/search.page.html
@@ -2,6 +2,8 @@
   <app-search-form/>
 </app-header>
 
-<app-container>
-  <app-list [items]="items"/>
-</app-container>
+<main>
+  <app-container>
+    <app-list [items]="items"/>
+  </app-container>
+</main>
