--- a/src/app/core/components/search-form/search-form.component.html
+++ b/src/app/core/components/search-form/search-form.component.html
@@ -2,7 +2,7 @@
   <div class="search-box" fxFlex="100%" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="10px">
     <fieldset fxFlex="100%">
       <input matNativeControl placeholder="Search..." name="term" #term>
-      <app-button [shadowed]="true" (click)="search(term.value)" [disabled]="loading">
+      <app-button [shadowed]="true" (click)="search(term.value)">
         <mat-icon>search</mat-icon>
       </app-button>
     </fieldset>
@@ -37,7 +37,7 @@
       <p>
         Filter by text:
         <input name="filter" #filter
-          ngDefaultControl [value]="filterTerm$ | async" (input)="setFilterTerm(filter.value)">
+          ngDefaultControl (input)="setFilterTerm(filter.value)">
       </p>
     </div>
   </div>
