feat: implement 404 page

--- a/src/app/core/components/search-form/search-form.component.html
+++ b/src/app/core/components/search-form/search-form.component.html
@@ -36,8 +36,8 @@
     <div>
       <p>
         Filter by text:
-        <input name="filter" #filter
-          ngDefaultControl (input)="setFilterTerm(filter.value)">
+        <input name="filter" #filter [value]="filter$ | async"
+          ngDefaultControl (input)="setFilter(filter.value)">
       </p>
     </div>
   </div>
