refactor: move header into the app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<app-header>
+  <app-search-form/>
+</app-header>
+
+<main>
+  <app-container>
+    <router-outlet></router-outlet>
+  </app-container>
+</main>
