--- a/src/app/youtube/pages/search.page.html
+++ b/src/app/youtube/pages/search.page.html
@@ -2,3 +2,6 @@
 <ng-container *ngIf="this.items$ | async; let items">
   <app-list [items]="items"/>
 </ng-container>
+<template appHeaderElement>
+  Move to the header
+</template>
